--- a/src/components/Spinner/Spinner.pcss
+++ b/src/components/Spinner/Spinner.pcss
@@ -63,3 +63,15 @@
     stroke-dashoffset: calc(0.66 * var(--size));
   }
 }
+
+.l {
+  transform: scale(1.5);
+}
+
+.m {
+  transform: scale(1);
+}
+
+.s {
+  transform: scale(0.5);
+}
