--- a/src/components/MemoCard/MemoCard.pcss
+++ b/src/components/MemoCard/MemoCard.pcss
@@ -2,16 +2,12 @@
   max-width: 300px;
   padding: 14px;
   border-radius: 6px;
-  font-family: Inter;
-  font-style: normal;
-  font-weight: normal;
   font-size: 12px;
-  line-height: 150%;
 
-  >ul {
+  > ul {
     all: unset;
 
-    >li {
+    > li {
       margin-left: 20px;
     }
   }
@@ -26,7 +22,7 @@
     color: var(--red);
   }
 
-  &.warning {
+  &.alert {
     background-color: rgba(242, 201, 76, 0.1);
     color: #c89a0f;
   }
