feat: add confirmation component

--- a/src/components/Avatar/Avatar.pcss
+++ b/src/components/Avatar/Avatar.pcss
@@ -3,16 +3,16 @@
   justify-content: center;
   align-items: center;
   border-radius: 50%;
+  background-color: var(--gray-light);
   font-weight: 600;
   color: var(--gray-dark);
   text-transform: uppercase;
-  background-color: var(--gray-light);
   overflow: hidden;
 }
 
 .avatarImage {
   width: 100%;
-  height: auto;
+  height: 100%;
   object-fit: cover;
 }
 
