--- a/src/components/Modal/Modal.pcss
+++ b/src/components/Modal/Modal.pcss
@@ -1,10 +1,27 @@
-.modal {
+.overlay {
   position: fixed;
-  top: 50%;
-  left: 50%;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  display: flex;
+  z-index: 9999;
+  background: #686e74;
+  animation: fadein 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+
+  &.beforeClose {
+    opacity: 0;
+  }
+}
+
+.modal {
   width: 488px;
   padding: 24px 32px;
   border-radius: 6px;
+  position: fixed;
+  top: 50%;
+  left: 50%;
   transform: translate(-50%, -50%);
   outline: none;
   word-wrap: break-word;
@@ -19,61 +36,4 @@
   to {
     opacity: 1;
   }
-}
-
-.overlay {
-  z-index: 11;
-  position: fixed;
-  top: 0;
-  right: 0;
-  left: 0;
-  bottom: 0;
-  display: flex;
-  background: rgba(4, 13, 24, 0.6);
-  animation: fadein 0.3s cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.content {
-  max-height: calc(100vh - 220px);
-  overflow-y: auto;
-  scrollbar-width: thin;
-}
-
-.header {
-  display: flex;
-  width: 100%;
-  margin-bottom: 24px;
-}
-
-.headerText {
-  display: flex;
-  flex-direction: column;
-  width: auto;
-  margin-right: auto;
-  font-style: normal;
-}
-
-.title {
-  margin-bottom: 6px;
-  font-size: 20px;
-  font-weight: 600;
-  line-height: 24px;
-}
-
-.subtitle {
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 21px;
-  color: var(--gray-dark);
-}
-
-.button {
-  width: 81px;
-  margin-left: 10px;
-}
-
-.footer {
-  display: flex;
-  justify-content: flex-end;
-  margin-top: 30px;
 }
