feat: add file upload component

--- a/src/components/Modal/Modal.pcss
+++ b/src/components/Modal/Modal.pcss
@@ -6,7 +6,7 @@
   bottom: 0;
   display: flex;
   z-index: 9999;
-  background: #686e74;
+  background: #040d1860;
   animation: fadein 0.3s cubic-bezier(0.4, 0, 0.2, 1);
   transition: opacity 0.3s cubic-bezier(0.4, 0, 0.2, 1);
 
