--- a/src/pages/profile/profile.styles.pcss
+++ b/src/pages/profile/profile.styles.pcss
@@ -1,21 +1,25 @@
-.button {
-  margin-right: 10px;
-}
-
-.row {
-  margin-top: 16px;
-  width: 400px;
-}
-
-.buttons {
+.uploadContainer {
+  width: 100%;
+  padding-top: 48px;
   display: flex;
-  margin: 25px 0;
+  justify-content: center;
+  align-items: center;
 }
 
-.avatar {
-  display: block;
-  width: 100px;
-  height: 100px;
-  margin: 4px 0 8px;
-  object-fit: cover;
+.heading {
+  margin-bottom: 24px;
+}
+
+.form {
+  width: 328px;
+  margin-top: 30px;
+
+  > *:not(:last-child) {
+    margin-bottom: 20px;
+  }
+}
+
+.submitButton {
+  margin-top: 40px;
+  font-weight: 600;
 }
